--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jay Butera",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.15.4"
+    "express": "^4.15.4",
+    "mongoose": "^4.11.12"
   }
 }
