--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jay Butera",
   "license": "MIT",
   "dependencies": {
+    "aws-sdk": "^2.122.0",
     "express": "^4.15.4",
     "mongoose": "^4.11.12",
     "multer": "^1.3.0"
